# soundkonverter

./: .directory  .ogg vorbis  CHANGELOG  CMakeLists.txt  INSTALL  README  TODO  combobutton.cpp  config.cpp  config.h  configadvancedpage.cpp  configadvancedpage.h  configbackendspage.cpp  configdialog.cpp  configdialog.h  configgeneralpage.cpp  configgeneralpage.h  convert.cpp  convert.h  dirdialog.cpp  dirdialog.h  filelist.cpp  filelist.h  filelistitem.cpp  filelistmodel.cpp  filelistmodel.h  global.h  logger.cpp  logger.h  logviewer.cpp  main.cpp  opener.cpp  opener.h  options.cpp  options.h  optionsdetailed.cpp  optionseditor.cpp  optionseditor.h  optionslayer.cpp  optionslayer.h  (+62 more)
.kdev4/: soundkonverter-1.0.kdev4
audiocd/: cdmanager.cpp  cdmanager.h  cdopener.cpp  cdopener.h  paranoia.cpp  paranoia.h
configdialog/: configdialog.cpp  configgeneralpage.cpp
core/: backendplugin.cpp  backendplugin.h  codecplugin.cpp  codecplugin.h  conversionoptions.cpp  conversionoptions.h  replaygainplugin.h
debian/: changelog  control  rules  soundkonverter.lintian-overrides
metadata/: tagengine.cpp  tagengine.h
opener/: cdopener.cpp  diropener.cpp  fileopener.cpp  playlistopener.cpp  urlopener.cpp
plugins/soundkonverter_codec_ffmpeg/: CMakeLists.txt  ffmpegcodecwidget.cpp  ffmpegcodecwidget.h  soundkonverter_codec_ffmpeg.cpp  soundkonverter_codec_ffmpeg.h
plugins/soundkonverter_codec_lame/: CMakeLists.txt  lamecodecwidget.cpp  soundkonverter_codec_lame.cpp  soundkonverter_codec_lame.h
plugins/soundkonverter_codec_ogg/: CMakeLists.txt  oggcodecwidget.cpp  oggcodecwidget.h  soundkonverter_codec_ogg.cpp  soundkonverter_codec_ogg.desktop  soundkonverter_codec_ogg.h
plugins/soundkonverter_replaygain_mp3gain/: soundkonverter_replaygain_mp3gain.cpp
plugins/soundkonverter_replaygain_vorbisgain/: CMakeLists.txt  soundkonverter_replaygain_vorbisgain.cpp
plugins/soundkonverter_ripper_cdparanoia/: CMakeLists.txt  soundkonverter_ripper_cdparanoia.cpp
po/: cs.po  de.po  es.po  es_AR.po  et.po  fr.po  hu.po  pt.po  pt_BR.po  ru.po  soundkonverter.pot
replaygainscanner/: replaygainfilelist.cpp  replaygainfilelist.h  replaygainfilelistitem.cpp  replaygainfilelistitem.h  replaygainscanner.cpp
